# sdl-pong

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
src/objects/: Ball.cpp  Ball.h  Body.h  Player.cpp  Player.h  Score.cpp  Score.h  Wall.h
src/scenes/: GameOver.cpp  GameOver.h  Menu.cpp  Menu.h  PlayerVsCpu.cpp  PlayerVsCpu.h  Scene.cpp  Scene.h
